Bug 252522 - Wrong items selected, some not selectable in multi-select (maintenance) view
Summary: Wrong items selected, some not selectable in multi-select (maintenance) view
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-27 11:05 UTC by Felix Wolfsteller
Modified: 2010-10-01 12:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-27 11:05:47 UTC
I have a remote folder with four read and two unread mails with the same subject inside (in that order)

No icon is displayed for the first unread mail if selected. Instead, the second unread mail is selected and its subject not displayed in read anymore.
Similarly, the third mail could not be selected.

Observed in 4:4.5~20100927.1180086-1maemo1.1179477 . I believe it worked better in earlier versions.
Comment 1 Volker Krause 2010-09-28 19:07:48 UTC
SVN commit 1180719 by vkrause:

Make the sorting stable in case the dates are equal. Fixes the jumpy
header view entries.

BUG: 252522


 M  +2 -0      messagelistproxy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180719
Comment 2 Felix Wolfsteller 2010-10-01 12:22:30 UTC
Not observed in 4:4.5~20101001.1181430-1maemo1.1181463 anymore.