Make the sorting stable in case the dates are equal. Fixes the jumpy header view entries.

BUG: 252522

svn path=/trunk/KDE/kdepim/mobile/; revision=1180719